--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>Github page</title>
   </head>
   <body>
-    <p>Hey! Check it out!</p>
+    <p>Make some changes!</p>
   </body>
 </html>
