--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Github page</title>
+    <title>Abner Pineda Silva</title>
     <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
