--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   </head>
   <body>
     <h1>Abner Pineda Silva</h1>
-    <p>Phone: 651-403-0255</p>
+    <p>Phone: 651-403-0255
+      <br>
+      Address: 2715 Girard Ave N #2 Minneapolis, MN 55411
+    </p>
   </body>
 </html>
