--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     </p>
     <h3>Metro PCS</h3>
     <h4>Sales Associate</h4>
-   
+      <ul>
+        <li>Sales to new and existing customers.</li>
+        <li>Be accountable for the cash balance and the end of each day.</li>
+        <li>Proficient with computer software.</li>
+        <li>Good customer service and communication skills</li>
+    </ul>
   </body>
 </html>
