Add a second list

--- a/index.html
+++ b/index.html
@@ -17,5 +17,11 @@
         <li>Proficient with computer software.</li>
         <li>Good customer service and communication skills</li>
     </ul>
+    <h3>Boston Scientific</h3>
+    <h4>Product Builder</h4>
+    <ul>
+      <li>Assembling small, lifesaving medical devices in a clean room environment.</li>
+      <li>Operating a computer and microscope</li>
+    </ul>
   </body>
 </html>
