--- a/index.html
+++ b/index.html
@@ -23,5 +23,13 @@
       <li>Assembling small, lifesaving medical devices in a clean room environment.</li>
       <li>Operating a computer and microscope</li>
     </ul>
+    <h3>Target</h3>
+    <h4>Produce</h4>
+    <ul>
+      <li>Prepare a fresh, quality product every day.</li> 
+      <li>Follow Food Safety standards.</li>
+      <li>Read labels and other product information.</li>
+      <li>Move and place merchandise using proper equipment and techniques.</li>
+    </ul>
   </body>
 </html>
