--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
       <br>
       Address: 2715 Girard Ave N #2 Minneapolis, MN 55411
     </p>
+    <div>
+      Strong communicator, experienced in customer service, great at time management,
+      proficient in using various types of computer software like Microsoft Word,
+      PowerPoint, Excel and design programs such as CAD. Basic knowledge of engineering. 
+      Know Spanish and English.
+    </div>
+
     <h3>Metro PCS</h3>
     <h4>Sales Associate</h4>
       <ul>
