--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
       PowerPoint, Excel and design programs such as CAD. Basic knowledge of engineering. 
       Know Spanish and English.
     </div>
-
+    <div>
+      Work Experience
+    </div>
     <h3>Metro PCS</h3>
     <h4>Sales Associate</h4>
       <ul>
