--- a/index.html
+++ b/index.html
@@ -40,5 +40,16 @@
       <li>Read labels and other product information.</li>
       <li>Move and place merchandise using proper equipment and techniques.</li>
     </ul>
+    <div>
+      Education
+    </div>
+    <h3>Osseo Senior High</h3>
+    <h4>High School Diploma</h4>
+    <p>Achieved a 3.5 GPA, graduated with honors and took advanced honor courses</p>
+    <h3>North Hennepin Community College</h3>
+    <h4>Marketing A.S. In Progress</h4>
+    <p>Currently hold a 3.48 GPA; plan on transferring to a four-year institution to receive my B.S.
+      in Marketing. Projected graduation date is June 2020.
+    </p>
   </body>
 </html>
