--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Abner Pineda Silva</title>
   </head>
   <body>
+    <img src="IMG_1476.jpg" id="pic">
     <h1>Abner Pineda Silva</h1>
     <p>Phone: 651-403-0255
       <br>
