--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <title>Abner Pineda Silva</title>
   </head>
   <body>
+    <div id="container">
     <img src="IMG_1476.jpg" id="pic">
+     <div id="content contact">
+      </div>
     <h1>Abner Pineda Silva</h1>
     <p>Phone: 651-403-0255
       <br>
