--- a/index.html
+++ b/index.html
@@ -9,16 +9,21 @@
      <div id="content contact">
       </div>
     <h1>Abner Pineda Silva</h1>
+      <div id="content-info">
     <p>Phone: 651-403-0255
       <br>
       Address: 2715 Girard Ave N #2 Minneapolis, MN 55411
     </p>
-    <div>
+      </div>
+    <div id="content-body">
+     <div id="content-summary">
+     <div id="content-summarycontent">
       Strong communicator, experienced in customer service, great at time management,
       proficient in using various types of computer software like Microsoft Word,
       PowerPoint, Excel and design programs such as CAD. Basic knowledge of engineering. 
       Know Spanish and English.
     </div>
+   </div>
     <div>
       Work Experience
     </div>
