--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
       Know Spanish and English.
     </div>
    </div>
-    <div>
-      Work Experience
+    <div id="content-professional">
+     <div id="content-professianlheader">
+     Work Experience
     </div>
     <h3>Metro PCS</h3>
     <h4>Sales Associate</h4>
