--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+   <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+		<meta content="utf-8" http-equiv="encoding"> 
     <title>Abner Pineda Silva</title>
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
   </head>
   <body>
     <div id="container">
