--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
    <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
-		<meta content="utf-8" http-equiv="encoding"> 
+		<meta charset="utf-8" http-equiv="encoding"/> 
     <title>Abner Pineda Silva</title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
   </head>
