--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 		<meta charset="utf-8" http-equiv="encoding"/> 
     <title>Abner Pineda Silva</title>
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <div id="container">
