--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="container">
     <img src="IMG_1476.jpg" id="pic">
-     <div id="content contact">
+     <div id="content-contact">
       </div>
     <h1>Abner Pineda Silva</h1>
       <div id="content-info">
