--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="container">
     <img src="IMG_1476.jpg" id="pic">
      <div id="content-contact">
+	     Abner Pineda
       </div>
     <h1>Abner Pineda Silva</h1>
       <div id="content-info">
