--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
    <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 		<meta charset="utf-8" http-equiv="encoding"/> 
-    <title>Abner Pineda Silva</title>
+    <title>My Prime Academy Application</title>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
 	
@@ -11,7 +11,7 @@
     <div id="container">
     <img src="IMG_1476.jpg" id="pic">
      <div id="content-contact">
-	     Abner Pineda
+	     Abner Pineda Silva
       </div>
 	    
       <div id="content-info">
