--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
      Work Experience
     </div>
     <h3>Metro PCS</h3>
+	<div class="block-date">
+	<div class="date"> August 2016 – October 2016</div>
+		
+	    </div>
+	    <div class="block-content">
     <h4>Sales Associate</h4>
       <ul>
         <li>Sales to new and existing customers.</li>
@@ -43,6 +48,8 @@
         <li>Proficient with computer software.</li>
         <li>Good customer service and communication skills</li>
     </ul>
+		</div>
+	</div>
     
 	    <h3>Boston Scientific</h3>
     <h4>Product Builder</h4>
