--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
      <div id="content-professianlheader">
      Work Experience
     </div>
+	<div id="content-Metro PCS">
     <h3>Metro PCS</h3>
 	<div class="block-date">
 	<div class="date"> August 2016 – October 2016</div>
