--- a/index.html
+++ b/index.html
@@ -52,12 +52,20 @@
 		</div>
 	</div>
     
-	    <h3>Boston Scientific</h3>
-    <h4>Product Builder</h4>
-    <ul>
+	<div id="blocK-Boston Scientific">
+	<h3>Boston Scientific</h3>
+		<div class="block-date">
+			<div class="date"> October 2015-Present</div>
+			<h4>Product Builder</h4>
+		</div>
+		<div class="block-content"
+	<ul>
       <li>Assembling small, lifesaving medical devices in a clean room environment.</li>
       <li>Operating a computer and microscope</li>
     </ul>
+	    </div>
+	    </div>
+	    
     <h3>Target</h3>
     <h4>Produce</h4>
     <ul>
