--- a/index.html
+++ b/index.html
@@ -52,22 +52,26 @@
 		</div>
 	</div>
     
-	<div id="blocK-Boston Scientific">
+	<div id="block-Boston Scientific">
 	<h3>Boston Scientific</h3>
 		<div class="block-date">
 			<div class="date"> October 2015-Present</div>
 			<h4>Product Builder</h4>
 		</div>
-		<div class="block-content"
+		<div class="block-content">
 	<ul>
       <li>Assembling small, lifesaving medical devices in a clean room environment.</li>
       <li>Operating a computer and microscope</li>
     </ul>
 	    </div>
 	    </div>
-	    
-    <h3>Target</h3>
+	<div id="block-target">    
+	<h3>Target</h3>
+		<div class="block-date">
+			<div class="date"> December 2016-August 2017</div>
     <h4>Produce</h4>
+		</div>
+		<div class="block-content"">
     <ul>
       <li>Prepare a fresh, quality product every day.</li> 
       <li>Follow Food Safety standards.</li>
