--- a/index.html
+++ b/index.html
@@ -82,10 +82,14 @@
     </div>
     <h3>Osseo Senior High</h3>
     <h4>High School Diploma</h4>
+	<div class="block-date">
+	<div class="date">June 2015</div>				   
     <p>Achieved a 3.5 GPA, graduated with honors and took advanced honor courses</p>
     
 	    <h3>North Hennepin Community College</h3>
-    <h4>Marketing A.S. In Progress</h4>
+    <h4>Marketing A.S.</h4>
+	<div class="block-date">
+	<div class="date">In Progress</div>		 
     <p>Currently hold a 3.48 GPA; plan on transferring to a four-year institution to receive my B.S.
       in Marketing. Projected graduation date is June 2020.
     </p>
