--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div id="content-info">
     <p>Phone: 651-403-0255
       <br>
-      Address: 2715 Girard Ave N #2 Minneapolis, MN 55411
+      Address: 6500 67th Ave N Apt. 308 Brooklyn Park, MN 55428
     </p>
       </div>
 	    
